--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,22 @@
 // Начните писать стили здесь
+
+    // ABSTRACT
+@import '_variables.scss';
+
+    // RESET
+
+
+    // LAYOUT
+// global
+@import 'layout/_page__body.scss';
+@import 'layout/_page-header.scss';
+@import 'layout/page-footer.scss';
+
+// main page
+@import 'layout/index/intro.scss';
+@import 'layout/index/advantages';
+
+// gallery page
+@import 'layout/photo/intro.scss';
+@import 'layout/photo/gallery.scss';
+
