Добавил отступы крупным блокам; корректировки стилей текста, переменных для цвета и шрифта

--- a/source/sass/_mixins.scss
+++ b/source/sass/_mixins.scss
@@ -18,7 +18,7 @@
 
 @mixin button-style {
   border: none;
-  background-color: #81B3D2;
+  background-color: $bg-second;
   font-weight: $weight-bold;
   font-size: 21px;
   line-height: 26px;
