--- a/source/sass/layout/_page-footer.scss
+++ b/source/sass/layout/_page-footer.scss
@@ -2,6 +2,19 @@
   background-color: $bg-main;
 }
 
+.page-footer__hashtag {
+  margin-top: 28.5px;
+  margin-bottom: 33.5px;
+}
+
+.social__list {
+  margin-bottom: 40px;
+}
+
 .social__item {
-  background-color: #81B3D2;;
+  background-color: $bg-second;
+}
+
+.page-footer__copyright {
+  margin-bottom: 22.9px;
 }
