--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,7 @@
 
     // LAYOUT
 // global
-@import 'layout/_page__body.scss';
+@import 'layout/_page.scss';
 @import 'layout/_page-header.scss';
 @import 'layout/_page-footer.scss';
 @import 'layout/_page-intro.scss';
