--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,10 +1,15 @@
 // ПЕРЕМЕННЫЕ
 
 // font
-$main-font: 'PT Sans', sans-serif;
+$main-font: 'PT Sans', 'Arial', sans-serif;
 $weight-norm: 400;
 $weight-bold: 700;
-$style-norm: normal;
 
-// color
+// colors
 $bg-main: #ffffff;
+$bg-second: #81b3d2;
+
+// Viewports
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
