--- a/source/sass/layout/_page-header.scss
+++ b/source/sass/layout/_page-header.scss
@@ -1,9 +1,12 @@
 .page-header {
+  margin-bottom: -28px;
   background-color: #ffffff;
 }
 
 .site-list__item {
-  background-color: #81B3D2;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  background-color: $bg-second;
   box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2);
     & a {
       text-decoration: none;
