--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,7 +1,7 @@
 // ПЕРЕМЕННЫЕ
 
 // font
-$main-font: 'PT Sans', 'Arial', sans-serif;
+$main-font: "PT Sans", "Arial", sans-serif;
 $weight-norm: 400;
 $weight-bold: 700;
 
