--- a/source/sass/layout/_page-header.scss
+++ b/source/sass/layout/_page-header.scss
@@ -7,15 +7,14 @@
   padding-top: 10px;
   padding-bottom: 5px;
   background-color: $bg-second;
-  box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2);
-    & a {
-      text-decoration: none;
-      color: #ffffff;
-      font-weight: $weight-bold;
-      font-size: 18px;
-      line-height: 40px;
-      text-transform: uppercase;
-    }
+  box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2);
+
+  & a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: $weight-bold;
+    font-size: 18px;
+    line-height: 40px;
+    text-transform: uppercase;
+  }
 }
-
-
