--- a/source/sass/layout/_page-intro.scss
+++ b/source/sass/layout/_page-intro.scss
@@ -1,4 +1,4 @@
 .page-intro {
-  background-image: url('../../../img/bg-back-mobile@1x.jpg');
+  background-image: url("../../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
