--- a/source/sass/layout/index/_intro.scss
+++ b/source/sass/layout/index/_intro.scss
@@ -1,5 +1,5 @@
 .intro__background {
-  background-image: url('../../../img/bg-back-mobile@1x.jpg');
+  background-image: url("../../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
 
@@ -8,4 +8,3 @@
   margin-bottom: 11px;
   background-color: $bg-main;
 }
-
