--- a/source/sass/layout/_page-footer.scss
+++ b/source/sass/layout/_page-footer.scss
@@ -1,10 +1,11 @@
 .page-footer {
+  padding-top: 28px;
+  padding-bottom: 22px;
   background-color: $bg-main;
 }
 
 .page-footer__hashtag {
-  margin-top: 28.5px;
-  margin-bottom: 33.5px;
+  margin: 0 0 34px 0;
 }
 
 .social__list {
@@ -13,8 +14,4 @@
 
 .social__item {
   background-color: $bg-second;
-}
-
-.page-footer__copyright {
-  margin-bottom: 22.9px;
 }
