--- a/source/sass/layout/photo/_gallery.scss
+++ b/source/sass/layout/photo/_gallery.scss
@@ -1,15 +1,11 @@
 .gallery {
-  margin-top: 24px;
+  margin-top: 32px;
   margin-bottom: 49px;
   background-color: $bg-main;
 }
 
-.gallery__text {
-  font-weight: $weight-norm;
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-  color: #333333;
+.photo-gallery {
+  margin-bottom: 32px;
 }
 
 .card-info__title {
