--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -1,32 +1,12 @@
 .gallery {
-  margin-top: 32px;
-  margin-bottom: 49px;
   background-color: $bg-main;
 }
 
-.photo-gallery {
-  margin-bottom: 32px;
+.gallery__header {
+  margin: 32px 9px 20px 12px;
 }
 
-.card-info__title {
-  font-weight: $weight-bold;
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-  color: #000000;
-}
-
-.card-info__author {
-  font-weight: $weight-norm;
-  font-size: 14px;
-  line-height: 24px;
-  color: #333333;
-}
-
-.likes__counter {
-  font-weight: $weight-bold;
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-  color: #000000;
+.gallery__title {
+  margin-top: 0;
+  margin-bottom: 27px;
 }
