--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,8 @@
 @import "layout/site-list.scss";
 @import "layout/page-intro.scss";
 @import "layout/page-footer.scss";
+@import "layout/social.scss";
+@import "layout/copyright.scss";
 
 
 // main page
@@ -24,6 +26,10 @@
 
 // gallery page
 @import "layout/photo/gallery.scss";
+@import "layout/photo/photo-gallery.scss";
+@import "layout/photo/photo-card.scss";
+@import "layout/photo/card-info.scss";
+@import "layout/photo/likes.scss";
 
 
 // COMPONENTS
