Переименовал файл стилей для отдельных блоков преимуществ, убрал margin у блока деталей; удалил стили для блока intro__decoration (пока не решил, как его сделать), перенес декоративный блок (моб версии) секции into внутрь блока с описанием

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,7 +21,7 @@
 
 // main page
 @import "layout/index/intro.scss";
-@import "layout/index/advantages.scss";
+@import "layout/index/advantage.scss";
 @import "layout/index/detail.scss";
 
 // gallery page
