Форматирую код для проверок; подключил normalize.css

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,7 @@
 @import "_mixins.scss";
 
 // BASE
-@import "base/normalize.scss";
+@import "base/normalize.css";
 @import "base/text-content.scss";
 
 // LAYOUT
