--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -8,6 +8,7 @@ $weight-bold: 700;
 // colors
 $bg-main: #ffffff;
 $bg-second: #81b3d2;
+$bg-field: #f2f2f2;
 
 // Viewports
 $mobile-width-min: 320px;
