Исправил подключение normalize.css

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,7 @@
 @import "_mixins.scss";
 
 // BASE
-@import "base/normalize.css";
+@import "base/normalize";
 @import "base/text-title.scss";
 @import "base/text-description.scss";
 @import "base/text-copyright.scss";
