Начал разметку адаптивной сетки (делаю коммит перед реорганизацией разметки)

--- a/source/sass/layout/page-header.scss
+++ b/source/sass/layout/page-header.scss
@@ -1,3 +1,15 @@
 .page-header {
   background-color: $bg-main;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width-min) {
+    flex-direction: row;
+  }
+}
+
+.page-header__logo {
+  width: 102px;
+  height: 84px;
+  order: 2;
 }
