--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 
 // BASE
 @import "base/normalize";
+@import "base/visually-hidden.scss";
 @import "base/text-title.scss";
 @import "base/text-description.scss";
 @import "base/text-copyright.scss";
@@ -14,6 +15,7 @@
 // global
 @import "layout/page.scss";
 @import "layout/page-header.scss";
+@import "layout/main-nav.scss";
 @import "layout/site-list.scss";
 @import "layout/page-intro.scss";
 @import "layout/page-footer.scss";
@@ -23,6 +25,7 @@
 
 // main page
 @import "layout/index/intro.scss";
+@import "layout/index/advantages.scss";
 @import "layout/index/advantage.scss";
 @import "layout/index/detail.scss";
 @import "layout/index/booking.scss";
@@ -42,4 +45,5 @@
 
 
 // COMPONENTS
+@import "components/img.scss";
 @import "components/button.scss";
