--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -1,9 +1,27 @@
+.advantage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .advantage__header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   background-color: #eeeeee;
 
   &--explicit {
     background-color: $bg-second;
   }
+}
+
+.advantage__header-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: auto;
+  margin-top: 55px;
+  margin-bottom: 39px;
 }
 
 .advantage__title {
@@ -27,6 +45,8 @@
 .advantage__description {
   margin-top: 0;
   margin-bottom: 0;
+  max-width: 295px;
+  text-align: center;
 
   &--explicit {
     color: #ffffff;
