--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -1,10 +1,55 @@
+.intro {
+  width: auto;
+  margin: 0 auto;
+}
+
+.intro__header {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+}
+
 .intro__background {
-  background-image: url("../../../img/bg-back-mobile@1x.jpg");
+  display: flex;
+  height: 389px;
+  background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   background-color: $bg-main;
+
+  @media (min-width: $tablet-width-min) {
+    background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-desktop@1x.jpg");
+  }
+}
+
+.intro__background-img {
+  margin: auto;
+  margin-top: 90px;
+  margin-bottom: 28px;
 }
 
 .intro__description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: auto;
   margin-top: 32px;
   margin-bottom: 11px;
+
+  @media (min-width: $tablet-width-min) {
+    margin-top: 44px;
+    margin-bottom: 52px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-top: 55px;
+    margin-bottom: 41px;
+  }
+}
+
+.intro__title {
+  max-width: 520px;
+  margin: 0;
+  margin-bottom: 27px;
+  text-align: center;
 }
