--- a/source/sass/layout/index/advantages.scss
+++ b/source/sass/layout/index/advantages.scss
@@ -1,10 +1,23 @@
 .advantages {
   width: auto;
   margin: 0 auto;
+  @media (min-width: $tablet-width-min) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .advantages__list {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width-min) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 768px;
+    margin: 0 auto;
+  }
 }
