--- a/source/sass/layout/page-header.scss
+++ b/source/sass/layout/page-header.scss
@@ -1,15 +1,32 @@
 .page-header {
+  position: relative;
   background-color: $bg-main;
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
+    justify-content: center;
   }
 }
 
 .page-header__logo {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: -28px;
   width: 102px;
   height: 84px;
   order: 2;
+  box-shadow: none;
+  z-index: 1;
+
+  @media (min-width: $tablet-width-min) {
+    position: absolute;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  @media (min-width: $desktop-width-min) {
+  }
 }
