--- a/source/sass/layout/main-nav.scss
+++ b/source/sass/layout/main-nav.scss
@@ -1,5 +1,5 @@
 .main-nav {
-  width: auto;
+  width: 100%;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
@@ -16,7 +16,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: auto;
   margin: 0;
   padding: 0;
   list-style: none;
