--- a/source/sass/layout/page-footer.scss
+++ b/source/sass/layout/page-footer.scss
@@ -1,15 +1,26 @@
 .page-footer {
   display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.page-footer__wrapper {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 auto;
   padding-top: 28px;
   padding-bottom: 23px;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
+    width: 768px;
     padding: 36px 0;
     justify-content: space-around;
+  }
+  @media (min-width: $desktop-width-min) {
+    width: 1200px;
   }
 }
 
