--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -68,9 +68,9 @@
   }
 }
 
-//! БЭМ!!!!!!!!!!!!!!
 .advantage--pic {
   @media (min-width: $tablet-width-min) {
+    flex-basis: 512px;
     flex-grow: 1;
   }
 }
