--- a/source/sass/layout/photo/card-info.scss
+++ b/source/sass/layout/photo/card-info.scss
@@ -1,3 +1,11 @@
+.card-info{
+  background-color: $bg-main;
+
+  @media (min-width: $tablet-width-min) {
+    background-color: #F2F2F2;
+  }
+}
+
 .card-info__title {
   margin-bottom: 1px;
   font-weight: $weight-bold;
