--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -1,17 +1,69 @@
 .gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
   background-color: $bg-main;
+
+  @media (min-width: $tablet-width-min) {
+    width: 648px;
+  }
+  @media (min-width: $desktop-width-min) {
+    width: 1200px;
+  }
 }
 
 .gallery__header {
-  margin: 32px 9px 20px 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 32px;
+  margin-bottom: 20px;
+  width: 310px;
+
+  @media (min-width: $tablet-width-min) {
+    width: 458px;
+    margin: 65px auto;
+  }
 }
 
 .gallery__title {
   margin-top: 0;
   margin-bottom: 27px;
+  text-align: center;
+}
+
+.gallery__text {
+  margin: 0;
+  padding: 0;
+}
+
+.gallery__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  @media (min-width: $tablet-width-min) {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+  }
 }
 
 .gallery__item {
   margin-top: 22px;
   margin-bottom: 15px;
+
+  @media (min-width: $tablet-width-min) {
+    flex-basis: 324px;
+  }
+  @media (min-width: $desktop-width-min) {
+    flex-basis: 400px;
+  }
 }
