Форматирую код для проверок

--- a/source/sass/layout/photo/card-info.scss
+++ b/source/sass/layout/photo/card-info.scss
@@ -1,8 +1,8 @@
-.card-info{
+.card-info {
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
   }
 }
 
