--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -23,9 +23,10 @@
   margin-top: 32px;
   margin-bottom: 20px;
   width: 310px;
+  max-width: 458px;
 
   @media (min-width: $tablet-width-min) {
-    width: 458px;
+    width: auto;
     margin: 65px auto;
   }
 }
