--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 
 // BASE
 @import "base/normalize";
+@import "base/fonts.scss";
 @import "base/visually-hidden.scss";
 @import "base/text-title.scss";
 @import "base/text-description.scss";
