--- a/source/sass/layout/main-nav.scss
+++ b/source/sass/layout/main-nav.scss
@@ -1,15 +1,6 @@
 .main-nav {
   width: 100%;
-
-  @media (min-width: $tablet-width-min) {
-    flex-direction: row;
-    justify-content: center;
-    width: 768px;
-  }
-
-  @media (min-width: $desktop-width-min) {
-    width: 1200px;
-  }
+  max-width: 1200px;
 }
 
 .main-nav__list {
@@ -22,6 +13,7 @@
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
+    justify-content: space-around;
   }
 }
 
