--- a/source/sass/layout/index/advantages.scss
+++ b/source/sass/layout/index/advantages.scss
@@ -10,11 +10,10 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  background-color: #eeeeee;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
   }
 }
