--- a/source/sass/layout/page-intro.scss
+++ b/source/sass/layout/page-intro.scss
@@ -1,23 +1,39 @@
 .page-intro {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+
+}
+
+.page-intro__background {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  margin: 0 auto;
-  background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-mobile@1x.jpg");
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 100%;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
-    width: 768px;
-    background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-desktop@1x.jpg");
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 
   @media (min-width: $desktop-width-min) {
-    width: 1200px;
+    //background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 }
 
 .page-intro__img {
+  width: 229px;
+  height: 39px;
   margin: auto;
+
+  @media (min-width: $tablet-width-min) {
+    width: 457px;
+    height: 78px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: 460px;
+    height: 80px;
+  }
 }
