--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -1,18 +1,7 @@
 .gallery {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
-  background-color: $bg-main;
-
-  @media (min-width: $tablet-width-min) {
-    width: 648px;
-  }
-
-  @media (min-width: $desktop-width-min) {
-    width: 1200px;
-  }
 }
 
 .gallery__header {
@@ -22,11 +11,9 @@
   margin: 0 auto;
   margin-top: 32px;
   margin-bottom: 20px;
-  width: 310px;
-  max-width: 458px;
 
   @media (min-width: $tablet-width-min) {
-    width: auto;
+    max-width: 458px;
     margin: 65px auto;
   }
 }
@@ -43,29 +30,40 @@
 }
 
 .gallery__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
 
   @media (min-width: $tablet-width-min) {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
 }
 
 .gallery__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 22px;
   margin-bottom: 15px;
 
   @media (min-width: $tablet-width-min) {
-    flex-basis: 324px;
+    flex-basis: 50%;
+    align-items: stretch;
+    margin: 0;
+
+    &--main {
+      flex-basis: 100%;
+    }
   }
 
   @media (min-width: $desktop-width-min) {
-    flex-basis: 400px;
+    flex-basis: 33.33%;
+
+    &--main {
+      flex-basis: 100%;
+    }
   }
 }
