--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -1,7 +1,25 @@
 .photo-card__img {
   margin-bottom: 10px;
+  @media (min-width: $tablet-width-min) {
+    margin: 0;
+  }
 }
 
 .photo-card__info {
+  margin: 0 20px;
   margin-bottom: 10px;
+  align-self: flex-start;
+
+  @media (min-width: $tablet-width-min) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: auto;
+    margin: 0;
+    padding: 16px 20px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-top: -80px;
+  }
 }
