--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -1,9 +1,3 @@
-.intro {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .intro__header {
   display: flex;
   flex-direction: column;
@@ -11,14 +5,17 @@
 
 .intro__background {
   display: flex;
-  //height: 389px;
-  background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-mobile@1x.jpg");
+  flex-direction: column;
+  max-width: 100%;
+  height: 389px;
+  background-image: url("../../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
-    background-image: url("https://htmlacademy-adaptive.github.io/835565-sedona-20/5/img/bg-back-desktop@1x.jpg");
+    height: 518px;
+    background-image: url("../../../img/bg-back-desktop@1x.jpg");
   }
 }
 
