--- a/source/sass/layout/page-intro.scss
+++ b/source/sass/layout/page-intro.scss
@@ -1,24 +1,20 @@
-.page-intro {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-
-}
-
 .page-intro__background {
   display: flex;
   flex-direction: column;
+  height: 214px;
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 100%;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
+    height: 290px;
     background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 
   @media (min-width: $desktop-width-min) {
-    //background-image: url("../../img/bg-back-desktop@1x.jpg");
+    height: 300px;
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 }
 
