--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 @import "layout/page-header.scss";
 @import "layout/main-nav.scss";
 @import "layout/site-list.scss";
+@import "layout/page-main.scss";
 @import "layout/page-intro.scss";
 @import "layout/page-footer.scss";
 @import "layout/social.scss";
@@ -46,5 +47,4 @@
 
 
 // COMPONENTS
-@import "components/img.scss";
 @import "components/button.scss";
