--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -8,14 +8,14 @@
   flex-direction: column;
   max-width: 100%;
   height: 389px;
-  background-image: url("../../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
     height: 518px;
-    background-image: url("../../../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 }
 
