--- a/source/sass/layout/page-intro.scss
+++ b/source/sass/layout/page-intro.scss
@@ -2,19 +2,18 @@
   display: flex;
   flex-direction: column;
   height: 214px;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 100%;
   background-color: $bg-main;
 
   @media (min-width: $tablet-width-min) {
     height: 290px;
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
   @media (min-width: $desktop-width-min) {
     height: 300px;
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
   }
 }
 
