Задал позиционирование лого, увеличил область клика ссылок меню, изменил стиль подписей к фотографиям на desktop версии

--- a/source/sass/layout/photo/card-info.scss
+++ b/source/sass/layout/photo/card-info.scss
@@ -6,8 +6,7 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    background-color: #000000;
-    opacity: 0.3;
+    background-color: rgba(0,0,0,0.3)
   }
 }
 
