--- a/source/sass/layout/form/review-form.scss
+++ b/source/sass/layout/form/review-form.scss
@@ -1,4 +1,36 @@
 .review-form {
-  padding-top: 0;
-  padding-bottom: 48px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0 20px 48px;
+
+  @media (min-width: $tablet-width-min) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 250px 235px 240px 60px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+}
+
+.review-form__group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-top: 20px;
+  padding-bottom: 25px;
+}
+
+.review-form__notif {
+  display: none;
+
+  @media (min-width: $tablet-width-min) {
+    display: block;
+    margin-left: auto;
+  }
 }
