--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -1,11 +1,20 @@
 .review__header {
-  margin-top: 36px;
-  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 36px auto 16px;
+
+  @media (min-width: $tablet-width-min) {
+    max-width: 435px;
+    margin-top: 64px;
+    margin-bottom: 62px;
+  }
 }
 
 .review__header-title {
   margin-top: 0;
   margin-bottom: 27px;
+  text-align: center;
 }
 
 .review__header-text {
