--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -1,6 +1,16 @@
 .map {
-  padding-top: 0;
-  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.map__content {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+
+  @media (min-width: $tablet-width-min) {
+    margin-bottom: 0;
+  }
 }
 
 .map__img {
