--- a/source/sass/layout/page-header.scss
+++ b/source/sass/layout/page-header.scss
@@ -22,11 +22,12 @@
 }
 
 .page-header__logo {
-  margin-bottom: -28px;
+  margin: 0 auto -28px;
   width: 102px;
   height: 84px;
   box-shadow: none;
   z-index: 1;
+  order: 2;
 
   @media (min-width: $tablet-width-min) {
     position: absolute;
