--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,6 +43,7 @@
 // form page
 @import "layout/form/review.scss";
 @import "layout/form/review-form.scss";
+@import "layout/form/form-group";
 @import "layout/form/field.scss";
 
 
