--- a/source/sass/layout/form/field.scss
+++ b/source/sass/layout/form/field.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   border: none;
+  flex-basis: 0;
   flex-grow: 1;
   background-color: $bg-field;
   overflow: hidden;
@@ -11,7 +12,6 @@
     height: 58px;
     @include text-title;
     text-transform: none;
-    margin-left: 15px;
     padding-top: 18px;
     padding-left: 22px;
     padding-bottom: 14px;
