--- a/source/sass/layout/form/form-group.scss
+++ b/source/sass/layout/form/form-group.scss
@@ -1,31 +1,38 @@
 .form-group {
   background-color: $bg-main;
 
+  @media (min-width: $tablet-width-min) {
+    flex-basis: 100%;
+  }
+
   &--impression {
     padding-bottom: 31px;
 
     @media (min-width: $tablet-width-min) {
-      grid-column: 1/2;
-      grid-row: 1/2;
+      order: 1;
+      flex-basis: 50%;
+      // grid-column: 1/2;
+      // grid-row: 1/2;
       padding: 0;
-      align-items: flex-start;
     }
   }
 
   &--name {
     @media (min-width: $tablet-width-min) {
-      grid-column: 2/3;
-      grid-row: 1/2;
+      order: 2;
+      flex-basis: 50%;
+      // grid-column: 2/3;
+      // grid-row: 1/2;
       padding: 0;
-      padding-left: 60px;
-      align-items: flex-start;
+      // padding-left: 60px;
     }
   }
 
   &--contact {
     @media (min-width: $tablet-width-min) {
-      grid-column: 1/3;
-      grid-row: 2/3;
+      order: 3;
+      // grid-column: 1/3;
+      // grid-row: 2/3;
     }
   }
 
@@ -34,8 +41,9 @@
     padding-bottom: 30px;
 
     @media (min-width: $tablet-width-min) {
-      grid-column: 1/3;
-      grid-row: 3 / 4;
+      order: 4;
+      // grid-column: 1/3;
+      // grid-row: 3 / 4;
       align-items: center;
     }
   }
@@ -44,8 +52,9 @@
     padding-bottom: 51px;
 
     @media (min-width: $tablet-width-min) {
-      grid-column: 1/3;
-      grid-row: 4/5;
+      order: 5;
+      // grid-column: 1/3;
+      // grid-row: 4/5;
     }
   }
 
@@ -53,8 +62,9 @@
     padding: 0;
 
     @media (min-width: $tablet-width-min) {
-      grid-column: 1/3;
-      grid-row: 5/6;
+      order: 6;
+      // grid-column: 1/3;
+      // grid-row: 5/6;
       flex-direction: row;
       align-items: center;
     }
@@ -71,6 +81,14 @@
   margin: 0;
   padding: 0;
   text-align: center;
+
+  &--name {
+    align-self: flex-start;
+  }
+
+  &--impression {
+    align-self: flex-start;
+  }
 }
 
 .form-group__item {
