--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -45,6 +45,7 @@
 @import "layout/form/review-form.scss";
 @import "layout/form/form-group";
 @import "layout/form/field.scss";
+@import "layout/form/checklist.scss";
 
 
 // COMPONENTS
