--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -15,6 +15,10 @@
   margin-top: 0;
   margin-bottom: 27px;
   text-align: center;
+
+  @media (min-width: $tablet-width-min) {
+    font-size: 30px;
+  }
 }
 
 .review__header-text {
