--- a/source/sass/layout/index/detail.scss
+++ b/source/sass/layout/index/detail.scss
@@ -27,6 +27,10 @@
 .detail__title {
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width-min) {
+    font-size: 21px;
+  }
 }
 
 .detail__description {
