--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -59,6 +59,10 @@
   padding: 0;
   margin-bottom: 27px;
   text-align: center;
+
+  @media (min-width: $tablet-width-min) {
+    font-size: 21px;
+  }
 }
 
 .intro__text {
