--- a/source/sass/layout/page-header.scss
+++ b/source/sass/layout/page-header.scss
@@ -31,9 +31,10 @@
 
   @media (min-width: $tablet-width-min) {
     position: absolute;
+    margin: 0;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -20px;
+    bottom: -28px;
   }
 }
