--- a/source/sass/layout/photo/video.scss
+++ b/source/sass/layout/photo/video.scss
@@ -37,6 +37,10 @@
   margin-top: 0;
   margin-bottom: 27px;
   text-align: center;
+
+  @media (min-width: $tablet-width-min) {
+    font-size: 30px;
+  }
 }
 
 .video__text {
