Форматирую код для проверок

--- a/source/sass/layout/photo/card-info.scss
+++ b/source/sass/layout/photo/card-info.scss
@@ -6,7 +6,7 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    background-color: rgba(0,0,0,0.3)
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
