--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -29,10 +29,9 @@
 .booking__title {
   margin-top: 0;
   margin-bottom: 19px;
-  text-align: center;
 
   @media (min-width: $tablet-width-min) {
-    font-size: 30px;
+    font-size: $size-wide-screen;
   }
 }
 
