--- a/source/sass/layout/main-nav.scss
+++ b/source/sass/layout/main-nav.scss
@@ -1,5 +1,22 @@
 .main-nav {
+  position: relative;
   width: 100%;
+  min-height: 56px;
+
+  @media (max-width: 767px) {
+    &--nojs .main-nav__toggle {
+      display: none;
+    }
+
+    &--nojs .main-nav__wrapper {
+      position: static;
+      min-height: 0;
+    }
+
+    &--nojs .site-list__item {
+      display: block;
+    }
+  }
 }
 
 .main-nav__list {
@@ -17,6 +34,81 @@
 }
 
 .main-nav__toggle {
+  position: absolute;
+  display: block;
+  margin: 0;
+  padding: 0;
+  z-index: 2;
+  width: 22px;
+  height: 22px;
+  right: 20px;
+  bottom: -39px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+
+  &:hover {
+    opacity: 60%;
+  }
+
+  &:active {
+    opacity: 30%;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 22px;
+  height: 4px;
+  background-color: $bg-second;
+  box-shadow: 0 9px 0 0 $bg-second, 0 18px 0 0 $bg-second;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 17px;
+  bottom: auto;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    right: 0;
+    width: 22px;
+    height: 3px;
+    background-color: #ffffff;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav--opened .main-nav__wrapper::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 7px;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+
   @media (min-width: $tablet-width-min) {
     display: none;
   }
