--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "layout/index/advantages.scss";
 @import "layout/index/advantage.scss";
 @import "layout/index/detail.scss";
+@import "layout/index/detail-icon.scss";
 @import "layout/index/booking.scss";
 @import "layout/index/map.scss";
 
