--- a/source/sass/base/normalize.css
+++ b/source/sass/base/normalize.css
@@ -4,13 +4,20 @@
    ========================================================================== */
 
 /**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * 1. Box-sizing reset.
+ * 2. Correct the line height in all browsers.
+ * 3. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+ *,
+ *::before,
+ *::after {
+   box-sizing: border-box; /* 1 */
+ }
+
 html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  line-height: 1.15; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 3 */
 }
 
 /* Sections
