--- a/source/sass/layout/main-nav.scss
+++ b/source/sass/layout/main-nav.scss
@@ -4,6 +4,11 @@
   min-height: 56px;
 
   @media (max-width: 767px) {
+    &.main-nav--closed {
+      height: 0;
+      min-height: 0;
+    }
+
     &--nojs .main-nav__toggle {
       display: none;
     }
@@ -73,6 +78,12 @@
   height: 4px;
   background-color: $bg-second;
   box-shadow: 0 9px 0 0 $bg-second, 0 18px 0 0 $bg-second;
+}
+
+.main-nav--closed .main-nav__list {
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
 
 .main-nav--opened .main-nav__toggle {
