--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -46,8 +46,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 55px;
-  margin-bottom: 39px;
+  padding-top: 34px;
+  padding-bottom: 39px;
 
   @media (min-width: $tablet-width-min) {
     flex-basis: 75%;
@@ -76,6 +76,7 @@
 .advantage__description {
   margin-top: 0;
   margin-bottom: 0;
+
 
   &--explicit {
     color: #ffffff;
