--- a/source/sass/layout/index/detail.scss
+++ b/source/sass/layout/index/detail.scss
@@ -1,15 +1,14 @@
 .detail {
-  align-items: flex-start;
   width: 90%;
 
   @media (min-width: $tablet-width-min) {
     width: 100%;
     justify-content: center;
-    align-items: baseline;
   }
 }
 
 .detail__item {
+  display: flex;
   background-color: $bg-main;
 
   &--house {
@@ -31,7 +30,6 @@
   }
 
   @media (min-width: $tablet-width-min) {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -41,11 +39,12 @@
 }
 
 .detail__header {
-  display: flex;
-  align-items: center;
+  flex-basis: 75%;
+  margin-top: 9px;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: column;
+    flex-basis: 60%;
   }
 }
 
@@ -65,22 +64,23 @@
 
 .detail__title {
   margin: 0;
+  margin-bottom: 16px;
   padding: 0;
 
   @media (min-width: $tablet-width-min) {
     margin-bottom: 34px;
+    text-align: center;
   }
 }
 
 .detail__description {
   margin: 0;
-  margin-left: 50px;
   padding: 0;
   text-align: left;
 
   @media (min-width: $tablet-width-min) {
-    max-width: 90%;
-    margin-left: 0;
+    max-width: 75%;
+    margin: 0 auto;
     text-align: center;
   }
 }
