--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.intro__decoration {
+.intro__header-decor {
   min-height: 57px;
   margin-top: -57px;
   background-image: url("../img/bg-intro-triangle-desktop.svg");
@@ -64,15 +64,24 @@
   }
 }
 
+.intro__description-decor {
+  width: 100%;
+  height: 37px;
+  background-color: $bg-second;
+
+  @media (min-width: $tablet-width-min) {
+    display: none;
+  }
+}
+
 // .intro__description-decor {
 //   min-height: 37px;
-//   background-image: url("../img/bg-triangle(1).svg");
+//   background-image: url("../img/bg-triangle.svg");
+//   background-color: $bg-second;
 //   background-repeat: no-repeat;
 //   background-position: center;
 //   background-size: cover;
-//   z-index: 2;
 // }
-
 
 .intro__title {
   margin: 0;
