--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -4,9 +4,25 @@
 }
 
 .map__content {
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 27px;
+    height: 27px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-image: url("../img/icon-map-marker.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+  }
 
   @media (min-width: $tablet-width-min) {
     margin-bottom: 0;
