--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,6 +39,7 @@
 @import "layout/photo/photo-card.scss";
 @import "layout/photo/card-info.scss";
 @import "layout/photo/likes.scss";
+@import "layout/photo/likes-icon.scss";
 @import "layout/photo/video.scss";
 
 // form page
