декор для intro всех страниц, декор стили для footer, стили состояния для button, переменные для цвета :hover и :active

--- a/source/sass/layout/main-nav.scss
+++ b/source/sass/layout/main-nav.scss
@@ -59,10 +59,10 @@
   &:active {
     opacity: 30%;
   }
-
-  &:focus {
-    outline: none;
-  }
+  //  //* проблема для навигации с клавиатуры
+  // &:focus {
+  //   outline: none;
+  // }
 
   @media (min-width: $tablet-width-min) {
     display: none;
