--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -10,6 +10,8 @@ $size-wide-screen: 30px;
 $bg-main: #ffffff;
 $bg-second: #81b3d2;
 $bg-field: #f2f2f2;
+$bg-hover: #669EC0;
+$bg-active: #5496BD;
 
 // Viewports
 $mobile-width-min: 320px;
