--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -6,6 +6,23 @@
     padding-bottom: 17px;
     background-color: $bg-second;
     color: #ffffff;
+
+    &:hover {
+      background-color: $bg-hover;
+    }
+
+    &:active {
+      background-color: $bg-active;
+      color: rgba(225, 225, 225, 0.3);
+    }
+  //  //* проблема для навигации с клавиатуры
+  // &:focus {
+  //   outline: none;
+  // }
+
+    &:disabled {
+      background-color: #e5e5e5;
+    }
   }
 
   &--submit {
