--- a/source/sass/layout/copyright.scss
+++ b/source/sass/layout/copyright.scss
@@ -7,22 +7,22 @@
   padding: 0;
   line-height: 0;
   text-decoration: none;
-}
 
-.copyright__icon {
-  width: 27px;
-  height: 34px;
-
-  &:hover {
+  &:hover .copyright__icon {
     path {
       fill: $bg-second;
     }
   }
 
-  &:active {
+  &:active .copyright__icon {
     opacity: 0.3;
     path {
       fill: #000000;
     }
   }
+}
+
+.copyright__icon {
+  width: 27px;
+  height: 34px;
 }
