--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -1,3 +1,21 @@
+//* // фон цвет для всего блока с фотографией
+.photo-card {
+  background-color: $bg-main;
+
+  @media (min-width: $tablet-width-min) {
+    background-color: #f2f2f2;
+
+    //* // выделение нечетных по цвету, кроме первого
+    &:nth-child(odd) {
+      background-color: #eaeaea;
+    }
+
+    &:first-child {
+      background-color: #f2f2f2;
+    }
+  }
+}
+
 .photo-card__img {
   max-width: 100%;
   height: auto;
