--- a/source/sass/layout/site-list.scss
+++ b/source/sass/layout/site-list.scss
@@ -9,12 +9,12 @@
 .site-list__item {
   width: 100%;
   background-color: $bg-second;
-  box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2), inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
   text-align: center;
   margin-bottom: 1px;
 
   &:first-child {
-    box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2);
+    box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2);
 
     @media (min-width: $tablet-width-min) {
       box-shadow: none;
@@ -22,7 +22,7 @@
   }
 
   &:last-child {
-    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
 
     @media (min-width: $tablet-width-min) {
       box-shadow: none;
@@ -65,7 +65,7 @@
       cursor: default;
 
       &:hover {
-        color: #604E43;
+        color: #604e43;
       }
 
       &:active {
@@ -96,6 +96,7 @@
       &:hover {
         color: $bg-second;
       }
+      
       &:active {
         color: rgba(0, 0, 0, 0.3);
       }
